--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Project</title>
+    <title>Group 4 Project</title>
+    
+    <meta charset="UTF-8" />
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="js/index.js" DEFER></script>
 </head>
 <body>
-    <h1>Project</h1>
+    <h1>Group 4 Project</h1>
 </body>
 </html>
