--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Group 4 Project</title>
-    
+
     <meta charset="UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script src="js/index.js" DEFER></script>
+	<script src="index.js" DEFER></script>
 </head>
 <body>
     <h1>Group 4 Project</h1>
