Collapsed pages into index.html
The content in homepage.html and about.html have been added to index.html, along with framework for the rest of the site. dinner.css was also updated. homepage.html and about.html remain for now, but with syntax fixes that allow the css to show.

--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,9 @@
 	<title>What's Dinner for Tonight?</title>
   	<meta charset="UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/dinner.css">
+    <link rel="stylesheet" type="text/css" href="dinner.css">
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script src="js/dinner.js" defer></script>
+	<script src="dinner.js" defer></script>
 </head>
 <body>
 	<nav>
