--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Group 4 Project</title>
+    <title>What's for Dinner Tonight?</title>
 
     <meta charset="UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="dinner.css">
 	
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script src="index.js" DEFER></script>
+	<script src="dinner.js" DEFER></script>
 </head>
 <body>
-    <h1>Group 4 Project</h1>
+	<section id="title-screen">
+		<h1>Dinner for Tonight</h1>
+    	<button id="Options">Options</button>
+	</section>
+
+	<section id="about">
+		<p>Created by Akira Shemansky, Angela Ambriz, Jiecheng Zhu, Kaya Levin, Raquel Herrera-Bernardino, and Shiyen Yang</p>
+	</section>
+
+	<section id="questionaire">
+		<!--This is where the user is asked questions to determine what foods to show-->
+	</section>
+
+	<section id="results">
+		<!--This is where the selected food and related info are displayed-->
+	</section>
 </body>
 </html>
