--- a/index.html
+++ b/index.html
@@ -30,17 +30,35 @@
 				To better confirm your dinner, please answer some questions first:<br>
 				<br>
 				Q1: Please select all of the following that may cause you allergies:<br>
-				Egg<br>
-				Dairy<br>
-				Corn<br>
-				Gluten<br>
+				a. Egg<br>
+				b. Dairy<br>
+				c. Corn<br>
+				d. Gluten<br>
+				e. None of the above<br>
 				<br>
 				Q2: ...<br>
+				a. ...<br>
+				b. ...<br>
+				c. ...<br>
+				d. ...<br>
+				e. None of the above<br>
 				<br>
 				Q3: ...<br>
+				a. ...<br>
+				b. ...<br>
+				c. ...<br>
+				d. ...<br>
+				e. None of the above<br>
 				<br>
 				Q4: ...<br>
+				a. ...<br>
+				b. ...<br>
+				c. ...<br>
+				d. ...<br>
+				e. None of the above<br>
 				<br>
+				Please enter your chosen options into the following box in order (i.e. If you choose "a" for all questions, your enter format is "aaaa"):<br>
+				<input type="text" id="options-inorder" placeholder="Enter your choice">
 				<button id="submit-btn">Submit</button>
 			</p1>
 		</div>
