--- a/index.html
+++ b/index.html
@@ -36,28 +36,21 @@
 				d. Gluten<br>
 				e. None of the above<br>
 				<br>
-				Q2: ...<br>
-				a. ...<br>
-				b. ...<br>
-				c. ...<br>
-				d. ...<br>
+				Q2: Please choose your prefer:<br>
+				a. Vegetarian<br>
+				b. Vegan<br>
+				c. Low Calorie<br>
+				d. Ketogenic Diet<br>
 				e. None of the above<br>
 				<br>
-				Q3: ...<br>
-				a. ...<br>
-				b. ...<br>
-				c. ...<br>
-				d. ...<br>
+				Q3: Have you eaten any of the following in the past few hours:<br>
+				a. Alcohol<br>
+				b. Soda<br>
+				c. Seafood<br>
+				d. Drugs<br>
 				e. None of the above<br>
 				<br>
-				Q4: ...<br>
-				a. ...<br>
-				b. ...<br>
-				c. ...<br>
-				d. ...<br>
-				e. None of the above<br>
-				<br>
-				Please enter your chosen options into the following box in order (i.e. If you choose "a" for all questions, your enter format is "aaaa"):<br>
+				Please enter your chosen options into the following box in order (i.e. If you choose "a" for all questions, your enter format is "aaa"):<br>
 				<input type="text" id="options-inorder" placeholder="Enter your choice">
 				<button id="submit-btn">Submit</button>
 			</p1>
