title image added

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 	</section>
 
 	<section id="title-screen">
-		<h1>What's for Dinner Tonight?</h1>
+		<div>
+			<img class="title" src="./images/title.gif">
+		</div>
+
+		<div>
 		<button id="options-btn">Options</button>
+		</div>
 	</section>
 
 	<section id="questionaire" style="display: none;">
