Fixed spelling of "questionnaire"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 	</section>
 
-	<section id="questionaire" style="display: none;">
+	<section id="questionnaire" style="display: none;">
 		<!--This is where the user is asked questions to determine what foods to show-->
 		<div id="questions" class="enclosed-section">
 			<p1>
