--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 				<input type="checkbox" id="in-drugs" name="drugs" value="off">
 				<label for="in-drugs">Drugs</label><br>
 				<br>
+				
+				04: What type of food are you feeling for: 
+				<input type="checkbox" id="in-warm" name="warm" value="off"> 
+				<label for="in-warm">Warm</label><br> 
 			</p1>
 			<button id="submit-btn">Submit</button>
 		</div>
