--- a/index.html
+++ b/index.html
@@ -93,7 +93,16 @@
 				Results<br>
 				<br>
 			</p>
+			<button id="more-btn">More</button>
 		</div>
+	</section>
+
+	<section id="showMore" style="display: none;">
+		<p>
+			<br>
+			More Recommended Dishes<br>
+			<br>
+		</p>
 	</section>
 </body>
 </html>
