--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
 				Results<br>
 				<br>
 			</p>
-			<button id="more-btn">More</button>
+			<!--<button id="more-btn">More</button>-->
 		</div>
 	</section>
 
-	<section id="showMore" style="display: none;">
+	<!--<section id="showMore" style="display: none;">
 		<p>
 			<br>
 			More Recommended Dishes<br>
 			<br>
 		</p>
-	</section>
+	</section>-->
 </body>
 </html>
