--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 				<input type="checkbox" id="food-cold" name="cold" value="off"> 
 				<label for="food-cold">Cold</label><br>
 				<br>
+				
+				05: Type of cooking style of food: <br>
+				<input type="checkbox" id="food-fast cooking style" name="fast cooking style" value="off">
+				<label for="in-fast cooking style">Fast cooking style</label><br> 
+				<input type="checkbox" id="food-medium cooking style" name="medium cooking style" value="off">
+				<label for="in-medium cooking style">medium cooking style</label><br>
+				<input type="checkbox" id="food-hard cooking style" name="hard cooking style" value="off">
+				<label for="in-hard cooking style">hard cooking style</label><br>
 			</p>
 			<button id="submit-btn">Submit</button>
 		</div>
