--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 				<input type="checkbox" id="food-fast cooking style" name="fast cooking style" value="off">
 				<label for="in-fast cooking style">Fast cooking style</label><br> 
 				<input type="checkbox" id="food-medium cooking style" name="medium cooking style" value="off">
-				<label for="in-medium cooking style">medium cooking style</label><br>
+				<label for="in-medium cooking style">Medium cooking style</label><br>
 				<input type="checkbox" id="food-hard cooking style" name="hard cooking style" value="off">
-				<label for="in-hard cooking style">hard cooking style</label><br>
+				<label for="in-hard cooking style">Hard cooking style</label><br>
 			</p>
 			<button id="submit-btn">Submit</button>
 		</div>
