--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 				<br>
 				
 				05: Type of cooking style of food: <br>
-				<input type="checkbox" id="food-fast cooking style" name="fast cooking style" value="off">
-				<label for="in-fast cooking style">Fast cooking style</label><br> 
+				<input type="checkbox" id="food-Easy cooking style" name="Easy cooking style" value="off">
+				<label for="in-Easy cooking style">Easy cooking style</label><br> 
 				<input type="checkbox" id="food-medium cooking style" name="medium cooking style" value="off">
 				<label for="in-medium cooking style">Medium cooking style</label><br>
 				<input type="checkbox" id="food-hard cooking style" name="hard cooking style" value="off">
