Added image credits & alt text

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 			</p>
 			<!--<button id="more-btn">More</button>-->
 		</div>
+
+		<div id="credits-page" class="enclosed-section">
+			<!--This div will be populated by the AJAX function-->
+		</div>
 	</section>
 
 	<!--<section id="showMore" style="display: none;">
