Added code for questions 1-3
The program will now filter out food options based on the user's responses to questions 1-3. Questions 4-5 have not been implemented yet.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 				<label for="allergy-corn">Corn</label><br>
 				<input type="checkbox" id="allergy-gluten" name="gluten" value="off">
 				<label for="allergy-gluten">Gluten</label><br>
+				<input type="checkbox" id="allergy-seafood" name="seafood" value="off">
+				<label for="allergy-seafood">Seafood</label><br>
 				<input type="checkbox" id="allergy-shellfish" name="shellfish" value="off">
 				<label for="allergy-shellfish">Shellfish</label><br>
 				<br>
@@ -108,13 +110,5 @@
 			<!--This div will be populated by the AJAX function-->
 		</div>
 	</section>
-
-	<!--<section id="showMore" style="display: none;">
-		<p>
-			<br>
-			More Recommended Dishes<br>
-			<br>
-		</p>
-	</section>-->
 </body>
 </html>
