--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 			<button id="submit-btn">Submit</button>
 		</div>
 	</section>
+<div class="loading"><div> 
 
 	<section id="results" style="display: none;">
 		<!--This is where the selected food and related info are displayed-->
