--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 			<button id="submit-btn">Submit</button>
 		</div>
 	</section>
-<div class="loading"><div> 
+<div class="loading" 
+	<img class="title" src="images/loadingpan.gif">
+	><div> 
 
 	<section id="results" style="display: none;">
 		<!--This is where the selected food and related info are displayed-->
