--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 			</p>
 			<!--<button id="more-btn">More</button>-->
 		</div>
-
+ <div class="image-container">
+        <img src="plate.gif" alt="Your Image">
+        <div class="plate"></div>
 		<div id="credits-page" class="enclosed-section">
 			<!--This div will be populated by the AJAX function-->
 		</div>
