--- a/index.html
+++ b/index.html
@@ -109,15 +109,16 @@
 		<!--This is where the selected food and related info are displayed-->
 		<div id="results-page" class="enclosed-section">
 			<p>
+				<div>
+			<img class="title" src="plate.gif">
+		</div>
 				<br>
 				<h2>Results</h2>
 				<br>
 			</p>
 			<!--<button id="more-btn">More</button>-->
 		</div>
- <div class="image-container">
-        <img src="plate.gif" alt="Your Image">
-        <div class="plate"></div>
+
 		<div id="credits-page" class="enclosed-section">
 			<!--This div will be populated by the AJAX function-->
 		</div>
