--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
 	</section>
 
 	<section id="results" style="display: none;">
+		<div>
+			<img class="title" src="/images/plate.gif">
+		</div>
 		<!--This is where the selected food and related info are displayed-->
 		<div id="results-page" class="enclosed-section">
 			<p>
-				<div>
-			<img class="title" src="plate.gif">
-		</div>
+				
 				<br>
 				<h2>Results</h2>
 				<br>
