--- a/index.html
+++ b/index.html
@@ -106,19 +106,17 @@
 	</section>
 
 	<section id="results" style="display: none;">
-		<!--This is where the selected food and related info are displayed-->
-		<div id="results-page" class="enclosed-section">
-			<p>
-				<br>
-				<h2>Results</h2>
-				<br>
-			</p>
-			<!--<button id="more-btn">More</button>-->
+		<div id="loading" style="display: none;">
+			<img src="./images/loadingpan.gif" alt="Loading..." />
 		</div>
-
-		<div id="credits-page" class="enclosed-section">
-			<!--This div will be populated by the AJAX function-->
+	
+		<div id="results-page" class="results-section" style="display: none;">
+		</div>
+	
+		<div id="credits-page" class="enclosed-section" style="display: none;">
 		</div>
 	</section>
+	
+
 </body>
 </html>
