--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 	<section id="results" style="display: none;">
 		<div>
-			<img class="title" src="/images/plate.gif">
+			<img class="title" src="./images/plate.gif">
 		</div>
 		<!--This is where the selected food and related info are displayed-->
 		<div id="results-page" class="enclosed-section">
