--- a/index.html
+++ b/index.html
@@ -106,11 +106,14 @@
 	</section>
 
 	<section id="results" style="display: none;">
-		<div id="loading" style="display: none;">
-			<img src="./images/loadingpan.gif" alt="Loading..." />
-		</div>
-	
-		<div id="results-page" class="results-section" style="display: none;">
+		<!--This is where the selected food and related info are displayed-->
+		<div id="results-page" class="enclosed-section">
+			<p>
+				<br>
+				<h2>Results</h2>
+				<br>
+			</p>
+			<!--<button id="more-btn">More</button>-->
 		</div>
 	
 		<div id="credits-page" class="enclosed-section" style="display: none;">
