--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<img src="./images/loadingpan.gif" alt="Loading..." />
 		</div>
 	
-		<div id="results-page" class="enclosed-section">
+		<div id="results-page" class="results-section" style="display: none;">
 		</div>
 	
 		<div id="credits-page" class="enclosed-section" style="display: none;">
