--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<br>
 				
 				<b class="qSection">Difficulty</b>
-				<br>05: Type of cooking style of food:</br> 
+				<br>Q5: Type of cooking style of food:</br> 
 				<br>
 				<input type="checkbox" id="food-Easy cooking style" name="Easy cooking style" value="off">
 				<label for="in-Easy cooking style">Easy cooking style</label><br> 
